# TrabajoPractico_PilasYColas_PP2

./: CMakeLists.txt  README.md
TP-PilasYColasPP2/data/: cola.h  dominio.h  funcionesCompartidas.h  menu.h  pila.h  preset_biblioteca.txt  util.h
TP-PilasYColasPP2/src/: cola.cpp  dominio.cpp  funcionesCompartidas.cpp  main.cpp  menu.cpp  pila.cpp  util.cpp
